Wed Feb  5 13:29:01 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c (rb_str_free): use FL_TEST(str, STR_SHARED) directly
	  because str is not embed.

	* string.c (str_replace): remove `FL_SET(str, STR_SHARED)' line
	  because STR_SET_SHARED() set STR_SHARED.

Wed Feb  5 13:18:08 2014  Koichi Sasada  <ko1@atdot.net>

	* internal.h: remove macros STR_NOCAPA and STR_NOCAPA_P().

	* string.c (rb_str_resize): remove `STR_SET_NOEMBED(str)' because
	  str_make_independent_expand() set NOEMBED flag.

	* string.c (rb_str_resize): remove `STR_NOCAPA_P(str)' check because
	  `str' is independent (not shared).

Wed Feb  5 12:54:25 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c: refactoring, especially about string flags.

	* string.c (STR_UNSET_NOCAPA): removed.
	  Use FL_UNSET() with STR_SHARED.

	* string.c (rb_str_capacity): check STR_SHARED directly
	  because it is not a embed string.

	* string.c (rb_str_modify_expand): ditto.

	* string.c (rb_str_shared_replace): use STR_SET_SHARED().

	* string.c (str_make_independent_expand): remove STR_UNSET_NOCAPA()
	  because `str' is not shared string.

Wed Feb  5 12:11:04 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c (RESIZE_CAPA): should not resize shared string.

Wed Feb  5 11:46:42 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_children): STR_ASSOC is no longer available.
	  Reported by @nagachika.
	  http://d.hatena.ne.jp/nagachika/20140204

Wed Feb  5 11:27:22 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c (rb_str_new_frozen): refactoring code.
	  * Move code from str_new_frozen_with_klass() (and remove it)
	  * `aux.shared' should not be 0 for STR_SHARED strings.

Wed Feb  5 04:23:41 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: New release of psych.
	* ext/psych/psych.gemspec: ditto

Wed Feb  5 04:16:41 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/yaml/emitter.c: merge libyaml 0.1.5
	* ext/psych/yaml/loader.c: ditto
	* ext/psych/yaml/parser.c: ditto